[package]
name = "russimp-sys-ng"
version = "2.0.6"
authors = ["Kek5chen"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/Kek5chen/russimp-sys-ng"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/Kek5chen/russimp-sys-ng"
description = "Raw Assimp bindings for Rust"
exclude = [
    "assimp/test",
    "assimp/tools",
    "doc",
    "port"
]

[lib]
name = "russimp_sys_ng"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "package"
path = "bin/package/main.rs"

[features]
default = []
build-assimp = []
prebuilt = []
nozlib = []
static-link = ["build-assimp"]

[dependencies]
flate2 = "1.0.25"
tar = "0.4.38"

[build-dependencies]
bindgen = "0.72"
built = "0.8"
cmake = "0.1"
flate2 = "1.1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tar = "0.4"
